--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
             <h1>Bookshelf</h1>
         </header>
         <main>
+            <div class="search-container">
+                    <input type="text" id="search-input" class="search-bar"
+                        placeholder="🔍 Cerca per titolo o autore...">
+                </div>
             <div class="bookshelf-container" id="bookshelf-container">
-                 <!-- <div id="loading">Cargando libros...</div> -->
     
             </div>
         </main>
         <footer>
             <div class="pagination-controls" id="pagination-controls">
-                <button id="prev-btn" class="prev-btn">🠈</button>
+                <button id="prev-btn" class="prev-btn">⬅️🡐</button>
                 <span id="page-info" class="page-info"></span>
-                <button id="next-btn" class="next-btn">🠊</button>
+                <button id="next-btn" class="next-btn">➡️🡒</button>
             </div>
         </footer>
 
