--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </main>
         <footer>
             <div class="pagination-controls" id="pagination-controls">
-                <button id="prev-btn" class="prev-btn">⬅️🡐</button>
+                <button id="prev-btn" class="prev-btn">⬅️</button>
                 <span id="page-info" class="page-info"></span>
-                <button id="next-btn" class="next-btn">➡️🡒</button>
+                <button id="next-btn" class="next-btn">➡️</button>
             </div>
         </footer>
 
