--- a/detail-book/detail.html
+++ b/detail-book/detail.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detaglio Libro</title>
-    <link rel="stylesheet" href="./book-detail.css">
+    <title>Dettaglio Libro</title>
+    <link rel="stylesheet" href="./detail.css">
 </head>
 <body>
     <header>
@@ -17,5 +17,5 @@
     </main>
     
 </body>
-<script type="module" src="./book-detail.js"></script>
+<script type="module" src="./detail.js"></script>
 </html>
